# cpp-template

./: .gitignore  CMakeLists.txt  readme.md
inc/: add.h
src/: add.cpp  main.cpp
